--- a/public/templates/user/gestion/index-gestion.html
+++ b/public/templates/user/gestion/index-gestion.html
@@ -3,10 +3,15 @@
         <div class="row no-padding">
             <div class="col-lg-8 col-sm-8">
                 <h2 class="title bold">{{event.name}} <span class="badge badge-success">{{event.status}}</span></h2>
-                <h4><ff translate>du</ff> {{event.date_debut}} {{event.heure_debut}} <ff translate>au</ff>  {{event.date_fin}} {{event.heure_fin}}</h4>
+                <h4>
+                    <ff translate>du</ff>
+                    {{event.date_debut}} {{event.heure_debut}}
+                    <ff translate>au</ff>
+                    {{event.date_fin}} {{event.heure_fin}}
+                </h4>
             </div>
             <!--<div class="col-lg-4 col-sm-4" style="margin-top: 3%; text-align: right;">-->
-                <!--<button class="btn btn-main btn-reverse" translate>Afficher</button>-->
+            <!--<button class="btn btn-main btn-reverse" translate>Afficher</button>-->
             <!--</div>-->
         </div>
     </div>
