--- a/public/templates/home/content.html
+++ b/public/templates/home/content.html
@@ -61,7 +61,7 @@
         <div class="row">
             <div class="col-lg-4" ng-repeat="e in events | limitTo:6|orderBy:'-start_date':false"
                  ng-if="e.tickets.length>0"
-                 >
+            >
                 <div class="card">
                     <div class="card-image" ui-sref="details({nom:e.name+'/'+e.id})">
                         <img class="img-responsive" src="{{e.banner_picture}}">
@@ -87,7 +87,8 @@
                         </div>
                         <div class="action">
                             <a class="pull-right" title="Partager"><i class="fa fa-share-alt"></i></a>
-                            <a class="pull-right" title="Sauvegarder" ng-click="interest(e)"><i class="fa fa-bookmark-o"></i></a>
+                            <a class="pull-right" title="Sauvegarder" ng-click="interest(e)"><i
+                                    class="fa fa-bookmark-o"></i></a>
                         </div>
 
 
