--- a/public/templates/static/header.html
+++ b/public/templates/static/header.html
@@ -17,7 +17,8 @@
             </div>
             <div style="float: left; width: 24%" ng-if="lieu">
                 <form ng-submit="searchEvent(key)">
-                    <input type="text" ng-model="key" required class="input" placeholder="{{'Recherche d\'événements ';''|translate}}"/>
+                    <input type="text" ng-model="key" required class="input"
+                           placeholder="{{'Recherche d\'événements ';''|translate}}"/>
                 </form>
             </div>
             <div class="navbar-collapse collapse">
@@ -29,7 +30,8 @@
                     <li class="" ng-if="!loguer"><a href="#" ui-sref="login"><span translate>Se connecter</span></a>
                     </li>
                     <li class="dropdown" ng-if="loguer">
-                        <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>&nbsp; {{user.person.first_name}}
+                        <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>&nbsp;
+                            {{user.person.first_name}}
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>
